# DouyinLiveRecorder

./: .gitignore  FAQ.md  README.MD  config.txt  environment.yml  main.pyw  pyproject.toml  requirements.txt  rooms.json  启动命令行版.bat  安装依赖.bat  更新记录.txt
dylr/core/: __init__.py  add_room_manager.py  app.py  browser.py  cli_state_manager.py  config.py  danmu_recorder.py  dy_api.py  dy_pb2.py  monitor.py  monitor_thread_manager.py  record_manager.py  recorder.py  recording.py  room.py  room_info.py  transcode_manager.py  video_recorder.py
dylr/gui/: app_win.py  grip_frame.py
dylr/plugin/: plugin.py
dylr/util/: cookie_utils.py  ffmpeg_utils.py  logger.py  url_utils.py  win_utils.py
src/core/: __init__.py  add_room_manager.py  app.py  browser.py  checker.py  config.py  record_manager.py  recorder.py  room.py  transcode_manager.py
src/gui/: app_win.py  grip_frame.py
src/plugin/: plugin.py
src/util/: cookie_utils.py  ffmpeg_utils.py  logger.py
tests/: conftest.py  test_validation.py
